OO-7399: Preview of quality data collections